# dbt-semantic-layer-voice-agent

./: .env.example  .gitignore  Makefile  README.md  push_tools_bt.py  pyproject.toml  test.py
.github/workflows/: run_eval.yml
datasets/: examples.jsonl
src/braintrust/: create_tools.py  load_to_braintrust.py  semantic_layer_pipeline.py
src/braintrust/evals/: eval_semantic_layer_query.py
src/bt/: create_tools.py  eval_semantic_layer_query.py  push_datasets.py  push_prompts.py  pyproject.toml
src/langchain_openai_voice/: __init__.py
src/server/: app.py  chart_models.py  client.py  models.py  pinecone_vectorstore.py  prompt.py  settings.py  storage.py  tools.py  utils.py  vectorstore.py
src/server/static/: index.html
src/voice_agent/: __init__.py  utils.py
