[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "dbt-sl-sdk[sync]",
    "braintrust",
    "openai",
    "pinecone[asyncio]",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
